# JiraPython

./: .gitignore  README.md  auto_sprints.py  cron.sh  emacs.txt  even_weekly.sh  installs.txt  new_issue.sh  requirements.txt
.github/workflows/: docker-image.yml  pylint.yml  python-app.yml  python-unit-test.yml
auto_sprint/: as_auto_sprint.py  as_even_main.py  as_main.py  as_test.py  auto_sprint.py  auto_sprints.py  common.py  it_config.yaml  it_issue_transition.py  it_main.py  it_test.py  new_issue.py  pyproject.toml
auto_sprint/common/: _common.py  common_test.py
auto_sprint/test/: auto_sprint_test.py  common_test.py  conftest.py
docker/: dockerfile
scripts/: .project  as_auto_sprint.py  as_even_main.py  as_test.py  it_config.yaml  it_issue_transition.py  it_main.py  it_test.py  lint.sh  new_issue.py
shortcuts/: .project  config.yaml  done_working.lnk  installer.bat  issue_transition.py  main.py  progress.exe.lnk  progress_working.lnk
test/: common_test.py
testing/: as_main_test.py
