[tool.poetry]
name = "auto_sprint"
version = "0.1.0"
description = "Poetry for auto_sprint"
authors = ["Jussi Niutanen <jussi.niutanen@gmail.com>"]
license = "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International Public License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
